# muse-archive

./: .gitignore  Cargo.toml  README.md
amuse/: Cargo.toml  README.md
amuse/examples/: midisynth.rs  playback.rs
amuse/examples/support/: basic_synth.ron
amuse/src/: instrument.rs  lib.rs  main.rs  midi.rs
amuse/src/midi/: message.rs
amuse/src/playback/: choir.rs  mod.rs  sequencer.rs  voice.rs
muse/: Cargo.toml  README.md
muse/src/: add.rs  amplify.rs  device.rs  envelope.rs  instrument.rs  lib.rs  manager.rs  max.rs  multiply.rs  node.rs  note.rs  pan.rs  parameter.rs  sampler.rs
muse/src/envelope/: config.rs  curve.rs  stage.rs
muse/src/instrument/: loaded.rs  serde.rs  serialization.rs
muse/src/instrument/serialization/: loader.rs  node_instantiator.rs
muse/src/manager/: cpal_thread.rs  device.rs  sampler_thread.rs
muse/src/oscillators/: mod.rs  sawtooth.rs  sine.rs  square.rs  triangle.rs
muse/src/sampler/: add.rs  amplify.rs  max.rs  multiply.rs  oscillator.rs  pan.rs  unison.rs
muse/src/sampler/oscillator/: sawtooth.rs  sine.rs  square.rs  triangle.rs
