[package]
name = "amuse"
version = "0.0.1-dev"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
license = "MIT"
description = "MIDI and scripting-driven virtual instrument playback"
homepage = "https://github.com/khonsulabs/muse"
repository = "https://github.com/khonsulabs/muse"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
midir = "0.6"
anyhow = "1"
kurbo = "0.6"
muse = { path = "../muse" }
crossbeam = "0.7"
once_cell = "1"

[profile.release]
debug = true

[dev-dependencies]
ron = "0.6"
