[package]
name = "muse"
version = "0.0.1-dev"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
license = "MIT"
description = "Virtual instrument synthesizer (coming soon)"
homepage = "https://github.com/khonsulabs/muse"
repository = "https://github.com/khonsulabs/muse"
readme = "README.md"

[features]
default = ["serialization"]
serialization = ["serde", "serde_derive"]

[dependencies]
cpal = "0.11"
pitch_calc = "0.12"
anyhow = "1"
thiserror = "1"
lazy_static = "1"
kurbo = "0.6"
crossbeam = "0.7"
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
num_cpus = "1"

[dev-dependencies]
approx = "0.3"
